--- a/camelPractice/src/main/resources/application.properties
+++ b/camelPractice/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=camelPractice
+
+# Spring Boot 기본 포트
+server.port=8080
+
+# Camel 로그 레벨 설정
+logging.level.org.apache.camel=INFO
