Camel Servlet 설정 추가 commit

--- a/camelPractice/src/main/resources/application.properties
+++ b/camelPractice/src/main/resources/application.properties
@@ -5,3 +5,7 @@ server.port=8080
 
 # Camel 로그 레벨 설정
 logging.level.org.apache.camel=INFO
+
+# Camel Servlet 설정 ('/camel' 경로 없애기)
+camel.servlet.mapping.context-path=/*
+camel.servlet.mapping.enabled=true
